--- a/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
@@ -34,11 +34,29 @@
         </div>
 
         <div class="p-4 shadow bg-white">
-            <div class="col-3 mb-3 filtro d-none">
-                <label for="editcliente" class="form-label size-12 font-weight-bold float-left">CLIENTE</label>
-                <select class="form-control form-control-sm cliente" style="width: 100%;" id="filtro" name="filtro[]" multiple="multiple" onchange="filter(this)">
-                    <option value="0" disabled>SELECCIONA</option>
-                </select>
+            <div class="mb-3 filtro d-flex justify-content-between">
+                <div class="col-6 d-flex flex-row">
+                    <div>
+                        <label for="editcliente" class="form-label size-12 font-weight-bold float-left">FILTRAR POR CLIENTE</label>
+                        <select class="form-control form-control-sm cliente" style="width: 100%;" id="filtro" name="filtro[]" multiple="multiple" onchange="filter(this)">
+                            <option value="0" disabled>SELECCIONA</option>
+                        </select>
+                    </div>
+                    <div>
+                        <input type="search" class="form-control my-4 ml-3" style="background-color:#EDECEC; height: 2.3rem;" placeholder="Buscar" onkeyup="DT(false, this.value, true)">
+                    </div>
+
+                </div>
+                <div class="col-6 my-auto">
+                    <div>
+
+                    <a href="javascript:void(0);" class="btn btn-sm btn-secondary float-right d-flex flex-column" onclick="$('#modalcargamasiva').modal('show'), $('#formcsv')[0].reset(), $('.table-csv').addClass('d-none')" style="margin-left: .5rem;text-decoration: unset !important; box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 20%);"><span class="material-icons">upload</span><span style="font-size: 10px; margin-top: .2rem;">importar</span></a>
+                    </div>
+                    <div>
+                    <a href="javascript:void(0);" class="btn btn-sm btn-secondary float-right" onclick="addEdit(0, 0, 0, 0)" style="height: 49px;width: 52px; box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 20%);"><span class="material-icons" style="padding-top: 9px;">add</span></a>
+
+                    </div>
+                </div>
             </div>
             <table id="table" class="table table-striped table-bordered display table-hover table-demand text-uppercase"
                    width="100%">
@@ -360,12 +378,16 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form id="formcsv" class="mb-3" onsubmit="event.preventDefault(), upload(this)">
-                    <div class="mb-3">
-                        <input class="form-control" type="file" id="formFile" name="csv" accept=".xlsx" onchange="importf(this)" required>
-                    </div>
-                    <button id="sendcsv" type="submit" class="btn btn-dark">ENVIAR</button>
-                </form>
+                <div class="row">
+                    <form id="formcsv" class="mb-3 col-12 d-flex justify-content-center flex-column" onsubmit="event.preventDefault(), upload(this)">
+                        <div class="mb-3">
+                            <input class="form-control" type="file" id="formFile" name="csv" accept=".xlsx" onchange="importf(this)" required>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <button id="sendcsv" type="submit" class="btn btn-dark">ENVIAR</button>
+                        </div>
+                    </form>
+                </div>
 
                 <a asp-controller="Demand" asp-action="DownloadLayout" class="btn btn-outline-info btn-sm d-flex align-items-center mx-auto" style="text-decoration: unset !important; width: 17.5rem;"><i class="material-icons">download</i>DESCARGAR PLANTILLA DE EJEMPLO</a>
             </div>
@@ -512,13 +534,11 @@
             });
         }
 
-        const upload = e => {
-            $('#sendcsv').prop('disabled', true).removeClass('btn-dark').addClass('btn-secondary').html('PROCESANDO...');
+        const upload = async e => {
             if (!demands) {
                 dToast("error", "No fué posible leer los datos", "Error")
                 return;
             }
-
 
             const params = {
                 method: 'POST',
@@ -528,22 +548,28 @@
                 body: JSON.stringify(demands)
             }
 
-            fetch('/Demand/CSV', params)
-                .then(response => {
-                    const filename = response.headers.get('content-disposition').split('filename=')[1].replace('"', '').split(';')[0].replace('"', '');
-                    response.blob().then(blob => {
-                        const x = window.URL.createObjectURL(blob);
-                        const anchor = document.createElement('a');
-                        anchor.href = x;
-                        anchor.download = filename;
-                        anchor.click();
-                        Table.draw();
-                        $('#sendcsv').prop('disabled', false).removeClass('btn-secondary').addClass('btn-dark').html('ENVIAR');
-                        $('#modalcargamasiva').modal('hide');
-                        dToast("success", "Carga realizada, revisa el reporte generado para verificar las operaciones realizadas", "Realizado");
-                    })
-                })
-                .catch(error => dToast("error", "Ocurrió un error al procesar la solicitud", "Error"), $('#sendcsv').prop('disabled', false).removeClass('btn-secondary').addClass('btn-dark').html('ENVIAR'))
+            $('#sendcsv').prop('disabled', true).removeClass('btn-dark').addClass('btn-secondary').html('PROCESANDO...');
+            let filename = '';
+            try {
+                const response = await fetch('/Demand/CSV', params);
+                const blob = await response.blob();
+
+                filename = response.headers.get('content-disposition').split('filename=')[1].replace('"', '').split(';')[0].replace('"', '');
+                const x = window.URL.createObjectURL(blob);
+                const anchor = document.createElement('a');
+                anchor.href = x;
+                anchor.download = filename;
+                anchor.click();
+                Table.draw();
+                $('#sendcsv').prop('disabled', false).removeClass('btn-secondary').addClass('btn-dark').html('ENVIAR');
+                $('#modalcargamasiva').modal('hide');
+                dToast("success", "Carga realizada, revisa el reporte generado para verificar las operaciones realizadas", "Realizado");
+
+            } catch (e) {
+                dToast("error", "Ocurrió un error al procesar la solicitud", "Error");
+                $('#sendcsv').prop('disabled', false).removeClass('btn-secondary').addClass('btn-dark').html('ENVIAR');
+                console.error(e);
+            }
         }
 
         const GetAddress = (id, type) => {
@@ -828,10 +854,10 @@
                         render: (data, type, row) => {
                             const { carrierId } = row;
                             return `<a href="/Demand/SetFullTravel?DemandId=${DemandId}&CarrierId=${carrierId}">
-                                    <span class="material-icons details">
-                                        local_shipping
-                                    </span>
-                                </a>`
+                                                            <span class="material-icons details">
+                                                                local_shipping
+                                                            </span>
+                                                        </a>`
                         }
                     }
                 ],
@@ -846,19 +872,24 @@
             })
         }
 
-        const DT = (customsearch = false, search) => {
+        const DT = (customsearch = false, search, isSearch = false) => {
             Table = $('#table').DataTable({
                 destroy: true,
                 responsive: true,
                 autoWidth: true,
                 processing: true,
                 serverSide: true,
+                dom: 'Btp',
                 ajax: {
                     type: 'POST',
                     url: '/Demand/DT',
                     data: data => {
-                        data.customsearch = customsearch,
-                            data.searchmodel = search
+                        if (!isSearch) {
+                            data.customsearch = customsearch,
+                                data.searchmodel = search
+                        } else {
+                            data.search.value = search ? search : '';
+                        }
                     }
                 },
                 columns: [
@@ -873,21 +904,21 @@
                         render: (data, type, row) => {
                             const { id, clientId, originId, destinationId, unitId, ofertasCount } = row;
                             return `
-                                <a href="javascript:void(0);" onclick="addEdit(${id}, ${clientId}, ${originId}, ${destinationId});">
-                                    <span class="material-icons">
-                                        edit
-                                    </span>
-                                </a>
-                                <a href="/Demand/SetTravel/${id}" onclick="create(${id});">
-                                    <span class="material-icons">
-                                        local_shipping
-                                    </span>
-                                </a>
-                                <a href="javascript:void(0);" onclick="DTC(${unitId}, ${originId}, ${id});">
-                                    <span class="material-icons">
-                                        search
-                                    </span>  ${ofertasCount > 0 ? `<span class="text-danger">${ofertasCount}</span>` : ``}
-                                </a>`
+                            <a href="javascript:void(0);" onclick="addEdit(${id}, ${clientId}, ${originId}, ${destinationId});">
+                                <span class="material-icons">
+                                    edit
+                                </span>
+                            </a>
+                            <a href="/Demand/SetTravel/${id}" onclick="create(${id});">
+                                <span class="material-icons">
+                                    local_shipping
+                                </span>
+                            </a>
+                            <a href="javascript:void(0);" onclick="DTC(${unitId}, ${originId}, ${id});">
+                                <span class="material-icons">
+                                    search
+                                </span>  ${ofertasCount > 0 ? `<span class="text-danger">${ofertasCount}</span>` : ``}
+                            </a>`
                         }
                     }
                 ],
@@ -899,10 +930,6 @@
                 ],
                 initComplete: () => {
                     $('#modalbusqueda').modal('hide');
-                    $('#table_length').html(`<a href="javascript:void(0);" class="btn btn-sm btn-secondary float-right d-flex flex-column" onclick="$('#modalcargamasiva').modal('show'), $('#formcsv')[0].reset(), $('.table-csv').addClass('d-none')" style="margin-left: .5rem;text-decoration: unset !important; box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 20%);"><span class="material-icons">upload</span><span style="font-size: 10px; margin-top: .2rem;">importar</importar></a>
-                        <a href="javascript:void(0);" class="btn btn-sm btn-secondary float-right" onclick="addEdit(0, 0, 0, 0)" style="height: 52px;width: 52px; box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 20%);"><span class="material-icons" style="padding-top: 9px;">add</span></a>`).show();
-                    //$('[aria-controls="table"]').prop('placeholder', 'BUSCAR');
-                    setTimeout(() => $('.filtro').removeClass('d-none'), 150);
                 }
             });
         }
@@ -939,19 +966,19 @@
                     }
                     const { cliente, tipounidad, origen, destino, fechasalida, arribo } = v;
                     v['fechasalida'] = moment(fechasalida, 'DD/MM/YYYY hh:mm A').toDate();
-                    demands = [ ...demands, v ];
+                    demands = [...demands, v];
                     const now = moment().toDate();
                     const then = moment(fechasalida, 'DD/MM/YYYY hh:mm A').toDate();
                     const isvalid = then >= now ? true : false;
                     $('#csv-info').append(`
-                        <tr ${!isvalid && 'class="bg-warning"'}>
-                            <td>${cliente}</td>
-                            <td>${tipounidad}</td>
-                            <td>${origen}</td>
-                            <td>${destino}</td>
-                            <td ${!isvalid && 'class="text-danger font-weight-bold"'}>${fechasalida}</td>
-                            <td>${arribo}</td>
-                        </tr>`);
+                    <tr ${!isvalid && 'class="bg-warning"'}>
+                        <td>${cliente}</td>
+                        <td>${tipounidad}</td>
+                        <td>${origen}</td>
+                        <td>${destino}</td>
+                        <td ${!isvalid && 'class="text-danger font-weight-bold"'}>${fechasalida}</td>
+                        <td>${arribo}</td>
+                    </tr>`);
                 });
 
                 $('.table-csv').DataTable({
@@ -983,6 +1010,6 @@
             o += String.fromCharCode.apply(null, new Uint8Array(data.slice(l * w)));
             return o;
         }
-            //Excel
+                                    //Excel
     </script>
 }
