*Route Id bugfix

--- a/KLS_WEB/KLS_WEB/Views/Route/_AddEdit.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Route/_AddEdit.cshtml
@@ -44,7 +44,7 @@
             <div class="row fid">
                 <label for="fid" class="col-sm-4 col-form-label col-form-label-sm">ID</label>
                 <div class="col-sm-8">
-                    @Html.TextBoxFor(x => x.IdGenerado, new { @type = "text", @class = "form-control form-control-sm", @id = "idgenerado" })
+                    @Html.TextBoxFor(x => x.Folio, new { @type = "text", @class = "form-control form-control-sm", @id = "idgenerado" })
                 </div>
             </div>
             <div class="row">
