--- a/KLS_WEB/KLS_WEB/Views/Route/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Route/Index.cshtml
@@ -49,10 +49,10 @@
             setTimeout(() => loadTable(), 1000);
         });
 
-        function AddEdit(id, idgenerado, button) {
+        function AddEdit(id, button) {
             const boton = jQuery(button);
             boton.attr('disabled', true);
-            $.get(`Route/AddEdit/${id}`, { idgenerado: idgenerado }, function (res) {
+            $.get(`Route/AddEdit/${id}`, function (res) {
                 boton.attr('disabled', false);
                 $('.body').html(res);
             }).fail(function (error) {
@@ -113,7 +113,7 @@
                     {
                         render: (data, type, row) => {
                             const { id, folio } = row;
-                            return `<button type="button" class="btn btn-sm" onclick="AddEdit(${id}, '${folio}', this);" style="background-color: #ffffff00;">
+                            return `<button type="button" class="btn btn-sm" onclick="AddEdit(${id}, this);" style="background-color: #ffffff00;">
                                         <span class="material-icons details">
                                             search
                                         </span>
@@ -128,6 +128,13 @@
                     { className: 'text-center', targets: [5, 6, 7, 8] }
                 ],
                 initComplete: () => {
+
+                    $('#table_length').html(`
+                                <button onclick="AddEdit(0, this);" class="btn btn-sm btn-outline-secondary float-right">
+                                    <span class="material-icons">
+                                        add
+                                    </span>
+                                </button>`).show();
                 }
             })
         }
