--- a/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
@@ -395,7 +395,7 @@
                 <a asp-controller="Demand" asp-action="DownloadLayout" class="btn btn-outline-info btn-sm d-flex align-items-center mx-auto" style="text-decoration: unset !important; width: 17.5rem;"><i class="material-icons">download</i>DESCARGAR PLANTILLA DE EJEMPLO</a>
             </div>
             <div class="modal-footer d-flex flex-column">
-                <p class="text-info size-12">Es importante que el archivo CSV tenga codificación UTF-8 para el correcto tratamiento de acentos y caracteres especiales</p>
+                <p class="text-info size-12 text-uppercase"><span class="text-danger">LOS ORIGENES Y DESTINOS</span> en el Excel XLSX deben llevar el nombre exacto con el que fueron registrados en el sistema en el apartado <span class="text-danger">"CLIENTES->ORIGENES/RUTAS"</span></p>
                 <table class="table table-striped table-bordered display table-hover table-csv text-uppercase d-none" width="100%">
                     <thead>
                         <tr>
